flux/apps/home1/backup-system.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: backup-system
