flux/apps/home1/kube-ops-view.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: kube-ops-view
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: kube-ops-view
  namespace: kube-ops-view
spec:
  parentRefs:
  - name: lab-gateway
    namespace: nginx-gateway
    sectionName: https
  hostnames:
  - "ops.lab.lkwt.dev"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: kube-ops-view
      port: 80
